--- a/css/typography.scss
+++ b/css/typography.scss
@@ -29,6 +29,12 @@ a {
 section {
    @extend %regular;
    @include body;
+   &#artists {
+      @include at-mobile {
+         font-size: 14px;
+         line-height: 18px;
+      }
+   }
 }
 
 p {
@@ -76,8 +82,8 @@ h1 {
       line-height: 68px;
    }
    @include at-mobile {
-      font-size: 64px;
-      line-height: 56px;
+      font-size: 56px;
+      line-height: 48px;
    }
 }
 
@@ -144,7 +150,6 @@ address, nav {
    text-align: right;
    padding-right: 18px;
 }
-
 
 .terms-conds p{
    text-indent: 0;
